<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginTeacherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:background="@color/colorBackground">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50"/>

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintHorizontal_bias="1"
            android:src="@drawable/ic_schoolbooks"
            app:layout_constraintStart_toStartOf="@id/guide_center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_top"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorBlack02"
            android:textSize="50sp"
            android:fontFamily="@font/indigo_daisy"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintBottom_toTopOf="@id/tv_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guide_center"/>

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Sign In as Teacher"
            android:textColor="@color/colorBlack03"
            android:textSize="15sp"
            android:fontFamily="@font/robotoregular"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintBottom_toBottomOf="@id/image_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guide_center"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:hint="@string/text_username"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/robotoregular"
            android:background="@drawable/et_custom_rounded"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_custom_rounded"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/et_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:fontFamily="@font/robotoregular"
                android:inputType="textPassword"
                android:background="@drawable/et_custom_rounded"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@id/et_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="?borderlessButtonStyle"
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/robotoregular"
            android:textColor="@android:color/white"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/layout_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_left"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintBottom_toTopOf="@id/swipeRight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/swipeRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/swipe_right_for_login_student"
            android:textColor="@color/colorBlack03"
            android:textSize="13sp"
            android:fontFamily="@font/robotoregular"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>